--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/style.css" />
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="preload" type="font/woff2" as="font" crossorigin href="/assets/fonts/Montserrat.woff2">
 		<link rel="preload" type="font/woff2" as="font" crossorigin href="/assets/fonts/BreeSerif-Regular.woff2">
 		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -27,6 +27,44 @@
 		<title>Kotrlja - Frizerski Studio</title>
 	</head>
 	<body>
+		<header class="header js-header">
+			<div class="wrap">
+				<div class="header__container">
+					<div class="header__logo">
+						<svg class="header__logo-img" viewBox="0 0 173.39 84.36"><path d="m151.11 84.36 22.28-49.34-13.81-5.69c.66 3.09.48 6.73-.73 10.37-2.72 8.21-9.25 11.47-15.31 10.64-9.92-1.37-11.63-11.6-8.91-19.8 1.36-4.12 3.76-7.45 6.54-9.5l-17.18-6.92c1.05 3.55.5 7.6-.14 11.79-1.83 12.07-10.47 17.38-17.57 16.23-9.17-1.47-12.06-9.11-11.37-18.83.5-7.09 4.54-12.92 9.09-16.34L86.69 0 69.38 6.97c4.54 3.42 8.59 9.26 9.09 16.34.69 9.72-2.2 17.36-11.37 18.83-7.1 1.15-15.74-4.16-17.56-16.23-.63-4.19-1.19-8.24-.14-11.79l-17.19 6.92c2.78 2.06 5.18 5.39 6.55 9.5 2.72 8.2 1.01 18.43-8.91 19.8-6.06.84-12.59-2.43-15.31-10.64-1.21-3.64-1.39-7.28-.72-10.37L0 35.03l22.44 49.34h128.67Z"/></svg>
+						<a class="header__logo-link" href="/" aria-label="Homepage link"></a>
+					</div>
+					<nav class="header__nav nav">
+						<button class="nav__btn-open js-nav-btn-open" aria-label="Open Navigation Menu">
+							<i class="icon ico-menu"></i>
+						</button>
+						<div class="nav__container js-nav-container">
+							<ul class="nav__list">
+								<li class="nav__item">
+									<button class="nav__href js-nav-href active" data-link="home">POČETNA</button>
+								</li>
+								<li class="nav__item">
+									<button class="nav__href js-nav-href" data-link="about">O NAMA</button>
+								</li>
+								<li class="nav__item">
+									<button class="nav__href js-nav-href" data-link="services">USLUGE</button>
+								</li>
+								<li class="nav__item">
+									<button class="nav__href js-nav-href" data-link="gallery">GALERIJA</button>
+								</li>
+								<li class="nav__item">
+									<button class="nav__href js-nav-href" data-link="blog">BLOG</button>
+								</li>
+								<li class="nav__item">
+									<button class="nav__href js-nav-href" data-link="contact">KONTAKT</button>
+								</li>
+							</ul>
+							<button class="nav__btn-close js-nav-btn-close" aria-label="Close Navigation Menu"></button>
+						</div>
+					</nav>
+				</div>
+			</div>
+		</header>
 		<section class="banner" id="home">
 			<span class="banner__prefix">DOBRODOŠLI U</span>
 			<h1 class="banner__title">Kotrlja - Frizerski Studio</h1>
