--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,45 @@
 				<img class="banner__bg-img" src="assets/images/banner/banner-lg.jpg" alt="Banner image">
 			</picture>
 		</section>
+		<section class="time">
+			<div class="wrap">
+				<div class="time__container">
+					<h2 class="time__title">RADNO VREME</h2>
+					<img class="time__logo" src="assets/svg/logo-small.svg" alt="Logo kotrlja">
+					<div class="time__items">
+						<div class="time__group time__group--first">
+							<div class="time__cell">
+								<span class="time__day">PON</span>
+								<span class="time__hours">10:00 - 17:00</span>
+							</div>
+							<div class="time__cell">
+								<span class="time__day">UTO</span>
+								<span class="time__hours">10:00 - 15:00</span>
+							</div>
+							<div class="time__cell">
+								<span class="time__day">SRE</span>
+								<span class="time__hours">10:00 - 20:00</span>
+							</div>
+						</div>
+						<div class="time__group time__group--second">
+							<div class="time__cell">
+								<span class="time__day">ČET</span>
+								<span class="time__hours">10:00 - 17:00</span>
+							</div>
+							<div class="time__cell">
+								<span class="time__day">PET</span>
+								<span class="time__hours">10:00 - 17:00</span>
+							</div>
+							<div class="time__cell">
+								<span class="time__day">SUB+NED</span>
+								<span class="time__hours">Zatvoreno</span>
+							</div>
+						</div>
+					</div>
+					<p class="time__info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+				</div>
+			</div>
+		</section>
 		<script defer src="js/script.js"></script>
 	</body>
 </html>
