--- a/src/index.html
+++ b/src/index.html
@@ -114,6 +114,57 @@
 				</div>
 			</div>
 		</section>
+		<footer class="footer">
+			<div class="footer__container">
+				<div class="footer__top">
+					<div class="wrap">
+						<div class="footer__box">
+							<img class="footer__logo" src="assets/svg/logo-footer.svg" alt="Kotrlja Frizerski Studio Logo">
+							<a class="footer__mail" href="mailto:kotrljafrizerskistudio@gmail.com">kotrljafrizerskistudio@gmail.com</a>
+							<a href="tel: +38160000000" class="footer__phone">+381 000-00-00</a>
+							<span class="footer__location">Grad, mesto, ulica i broj</span>
+							<ul class="footer__social-media">
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://sr-rs.facebook.com/" aria-label="Facebook social link">
+										<span class="icon ico-facebook"></span>
+									</a>
+								</li>
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://twitter.com/" aria-label="Twitter social link">
+										<span class="icon ico-twitter"></span>
+									</a>
+								</li>
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://www.instagram.com/" aria-label="Instagram social link">
+										<span class="icon ico-instagram"></span>
+									</a>
+								</li>
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://www.pinterest.com/" aria-label="Pinterest social link">
+										<span class="icon ico-pinterest"></span>
+									</a>
+								</li>
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://www.youtube.com/" aria-label="Youtube social link">
+										<span class="icon ico-youtube"></span>
+									</a>
+								</li>
+								<li class="footer__social">
+									<a class="footer__social-link" href="https://www.google.com/" aria-label="Google+ social link">
+										<span class="icon ico-google"></span>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="footer__bottom">
+					<div class="wrap">
+						<span class="footer__copy">© Copyright Hobber  2023. All Rights Reserved. By Anevem</span>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script defer src="js/script.js"></script>
 	</body>
 </html>
