--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="preload" type="font/woff2" as="font" crossorigin href="/assets/fonts/Montserrat.woff2">
-		<link rel="preload" type="font/woff2" as="font" crossorigin href="/assets/fonts/BreeSerif-Regular.woff2">
-		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<meta name="msapplication-TileColor" content="#ffffff">
-		<meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
-		<meta name="theme-color" content="#ffffff">
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link
+			rel="preload"
+			type="font/woff2"
+			as="font"
+			crossorigin
+			href="/assets/fonts/Montserrat.woff2"
+		/>
+		<link
+			rel="preload"
+			type="font/woff2"
+			as="font"
+			crossorigin
+			href="/assets/fonts/BreeSerif-Regular.woff2"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="57x57"
+			href="favicon/apple-icon-57x57.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="60x60"
+			href="favicon/apple-icon-60x60.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="72x72"
+			href="favicon/apple-icon-72x72.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="76x76"
+			href="favicon/apple-icon-76x76.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="114x114"
+			href="favicon/apple-icon-114x114.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="120x120"
+			href="favicon/apple-icon-120x120.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="144x144"
+			href="favicon/apple-icon-144x144.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="152x152"
+			href="favicon/apple-icon-152x152.png"
+		/>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="favicon/apple-icon-180x180.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="192x192"
+			href="favicon/android-icon-192x192.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="favicon/favicon-32x32.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="96x96"
+			href="favicon/favicon-96x96.png"
+		/>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="favicon/favicon-16x16.png"
+		/>
+		<link rel="manifest" href="favicon/manifest.json" />
+		<meta name="msapplication-TileColor" content="#ffffff" />
+		<meta
+			name="msapplication-TileImage"
+			content="favicon/ms-icon-144x144.png"
+		/>
+		<meta name="theme-color" content="#ffffff" />
 		<title>Kotrlja - Frizerski Studio</title>
 	</head>
 	<body>
@@ -31,35 +102,61 @@
 			<div class="wrap">
 				<div class="header__container">
 					<div class="header__logo">
-						<svg class="header__logo-img" viewBox="0 0 173.39 84.36"><path d="m151.11 84.36 22.28-49.34-13.81-5.69c.66 3.09.48 6.73-.73 10.37-2.72 8.21-9.25 11.47-15.31 10.64-9.92-1.37-11.63-11.6-8.91-19.8 1.36-4.12 3.76-7.45 6.54-9.5l-17.18-6.92c1.05 3.55.5 7.6-.14 11.79-1.83 12.07-10.47 17.38-17.57 16.23-9.17-1.47-12.06-9.11-11.37-18.83.5-7.09 4.54-12.92 9.09-16.34L86.69 0 69.38 6.97c4.54 3.42 8.59 9.26 9.09 16.34.69 9.72-2.2 17.36-11.37 18.83-7.1 1.15-15.74-4.16-17.56-16.23-.63-4.19-1.19-8.24-.14-11.79l-17.19 6.92c2.78 2.06 5.18 5.39 6.55 9.5 2.72 8.2 1.01 18.43-8.91 19.8-6.06.84-12.59-2.43-15.31-10.64-1.21-3.64-1.39-7.28-.72-10.37L0 35.03l22.44 49.34h128.67Z"/></svg>
-						<a class="header__logo-link" href="/" aria-label="Homepage link"></a>
+						<svg class="header__logo-img" viewBox="0 0 173.39 84.36">
+							<path
+								d="m151.11 84.36 22.28-49.34-13.81-5.69c.66 3.09.48 6.73-.73 10.37-2.72 8.21-9.25 11.47-15.31 10.64-9.92-1.37-11.63-11.6-8.91-19.8 1.36-4.12 3.76-7.45 6.54-9.5l-17.18-6.92c1.05 3.55.5 7.6-.14 11.79-1.83 12.07-10.47 17.38-17.57 16.23-9.17-1.47-12.06-9.11-11.37-18.83.5-7.09 4.54-12.92 9.09-16.34L86.69 0 69.38 6.97c4.54 3.42 8.59 9.26 9.09 16.34.69 9.72-2.2 17.36-11.37 18.83-7.1 1.15-15.74-4.16-17.56-16.23-.63-4.19-1.19-8.24-.14-11.79l-17.19 6.92c2.78 2.06 5.18 5.39 6.55 9.5 2.72 8.2 1.01 18.43-8.91 19.8-6.06.84-12.59-2.43-15.31-10.64-1.21-3.64-1.39-7.28-.72-10.37L0 35.03l22.44 49.34h128.67Z"
+							/>
+						</svg>
+						<a
+							class="header__logo-link"
+							href="/"
+							aria-label="Homepage link"
+						></a>
 					</div>
 					<nav class="header__nav nav">
-						<button class="nav__btn-open js-nav-btn-open" aria-label="Open Navigation Menu">
+						<button
+							class="nav__btn-open js-nav-btn-open"
+							aria-label="Open Navigation Menu"
+						>
 							<i class="icon ico-menu"></i>
 						</button>
 						<div class="nav__container js-nav-container">
 							<ul class="nav__list">
 								<li class="nav__item">
-									<button class="nav__href js-nav-href active" data-link="home">POČETNA</button>
+									<button class="nav__href js-nav-href active" data-link="home">
+										POČETNA
+									</button>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="about">O NAMA</button>
+									<button class="nav__href js-nav-href" data-link="about">
+										O NAMA
+									</button>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="services">USLUGE</button>
+									<button class="nav__href js-nav-href" data-link="services">
+										USLUGE
+									</button>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="gallery">GALERIJA</button>
+									<button class="nav__href js-nav-href" data-link="gallery">
+										GALERIJA
+									</button>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="blog">BLOG</button>
+									<button class="nav__href js-nav-href" data-link="blog">
+										BLOG
+									</button>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="contact">KONTAKT</button>
+									<button class="nav__href js-nav-href" data-link="contact">
+										KONTAKT
+									</button>
 								</li>
 							</ul>
-							<button class="nav__btn-close js-nav-btn-close" aria-label="Close Navigation Menu"></button>
+							<button
+								class="nav__btn-close js-nav-btn-close"
+								aria-label="Close Navigation Menu"
+							></button>
 						</div>
 					</nav>
 				</div>
@@ -68,18 +165,32 @@
 		<section class="banner" id="home">
 			<span class="banner__prefix">DOBRODOŠLI U</span>
 			<h1 class="banner__title">Kotrlja - Frizerski Studio</h1>
-			<img class="banner__logo" src="assets/svg/logo-big.svg" alt="Logo">
+			<img class="banner__logo" src="assets/svg/logo-big.svg" alt="Logo" />
 			<picture class="banner__bg-picture">
-				<source media="(max-width: 767px)" srcset="assets/images/banner/banner-s.jpg">
-				<source media="(min-width: 768px) and (max-width: 1024px)" srcset="assets/images/banner/banner-m.jpg">
-				<img class="banner__bg-img" src="assets/images/banner/banner-lg.jpg" alt="Banner image">
+				<source
+					media="(max-width: 767px)"
+					srcset="assets/images/banner/banner-s.jpg"
+				/>
+				<source
+					media="(min-width: 768px) and (max-width: 1024px)"
+					srcset="assets/images/banner/banner-m.jpg"
+				/>
+				<img
+					class="banner__bg-img"
+					src="assets/images/banner/banner-lg.jpg"
+					alt="Banner image"
+				/>
 			</picture>
 		</section>
 		<section class="time">
 			<div class="wrap">
 				<div class="time__container">
 					<h2 class="time__title">RADNO VREME</h2>
-					<img class="time__logo" src="assets/svg/logo-small.svg" alt="Logo kotrlja">
+					<img
+						class="time__logo"
+						src="assets/svg/logo-small.svg"
+						alt="Logo kotrlja"
+					/>
 					<div class="time__items">
 						<div class="time__group time__group--first">
 							<div class="time__cell">
@@ -110,8 +221,69 @@
 							</div>
 						</div>
 					</div>
-					<p class="time__info">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+					<p class="time__info">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur
+						pellentesque neque eget diam.
+					</p>
 				</div>
+			</div>
+		</section>
+		<section class="testimonials">
+			<h3 class="testimonials__title">ZADOVOLJNE MUŠTERIJE</h3>
+			<img
+				class="testimonials__logo"
+				src="assets/svg/logo-small.svg"
+				alt="Frizerski Studio Kotrlja logo"
+			/>
+			<div class="testimonials__slider swiper js-testimonials-slider">
+				<div class="testimonials__wrapper swiper-wrapper">
+					<div class="testimonials__slider swiper-slide">
+						<p class="testimonials__text">
+							Pellentesque egestas turpis eget mauris elementum mollis. Vel ne
+							integre vivendo. Ut cum essent facilisi scriptorem. Ut cum essent.
+						</p>
+						<div class="testimonials__client client">
+							<img
+								class="client__img"
+								src="assets/images/testimonial/testimonial.jpg"
+								alt="Zadovoljna musterija"
+							/>
+							<h4 class="client__name">Marko Marković</h4>
+							<span class="client__desc">-Mušterija</span>
+						</div>
+					</div>
+					<div class="testimonials__slider swiper-slide">
+						<p class="testimonials__text">
+							Pellentesque egestas turpis eget mauris elementum mollis. Vel ne
+							integre vivendo. Ut cum essent facilisi scriptorem. Ut cum essent.
+						</p>
+						<div class="testimonials__client client">
+							<img
+								class="client__img"
+								src="assets/images/testimonial/testimonial.jpg"
+								alt="Zadovoljna musterija"
+							/>
+							<h4 class="client__name">Marko Marković</h4>
+							<span class="client__desc">-Mušterija</span>
+						</div>
+					</div>
+					<div class="testimonials__slider swiper-slide">
+						<p class="testimonials__text">
+							Pellentesque egestas turpis eget mauris elementum mollis. Vel ne
+							integre vivendo. Ut cum essent facilisi scriptorem. Ut cum essent.
+						</p>
+						<div class="testimonials__client client">
+							<img
+								class="client__img"
+								src="assets/images/testimonial/testimonial.jpg"
+								alt="Zadovoljna musterija"
+							/>
+							<h4 class="client__name">Marko Marković</h4>
+							<span class="client__desc">-Mušterija</span>
+						</div>
+					</div>
+				</div>
+				<div class="testimonials__pagination swiper-pagination js-testimonials-pagination"></div>
 			</div>
 		</section>
 		<footer class="footer">
@@ -119,38 +291,72 @@
 				<div class="footer__top">
 					<div class="wrap">
 						<div class="footer__box">
-							<img class="footer__logo" src="assets/svg/logo-footer.svg" alt="Kotrlja Frizerski Studio Logo">
-							<a class="footer__mail" href="mailto:kotrljafrizerskistudio@gmail.com">kotrljafrizerskistudio@gmail.com</a>
-							<a href="tel: +38160000000" class="footer__phone">+381 000-00-00</a>
+							<img
+								class="footer__logo"
+								src="assets/svg/logo-footer.svg"
+								alt="Kotrlja Frizerski Studio Logo"
+							/>
+							<a
+								class="footer__mail"
+								href="mailto:kotrljafrizerskistudio@gmail.com"
+								>kotrljafrizerskistudio@gmail.com</a
+							>
+							<a href="tel: +38160000000" class="footer__phone"
+								>+381 000-00-00</a
+							>
 							<span class="footer__location">Grad, mesto, ulica i broj</span>
 							<ul class="footer__social-media">
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://sr-rs.facebook.com/" aria-label="Facebook social link">
+									<a
+										class="footer__social-link"
+										href="https://sr-rs.facebook.com/"
+										aria-label="Facebook social link"
+									>
 										<span class="icon ico-facebook"></span>
 									</a>
 								</li>
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://twitter.com/" aria-label="Twitter social link">
+									<a
+										class="footer__social-link"
+										href="https://twitter.com/"
+										aria-label="Twitter social link"
+									>
 										<span class="icon ico-twitter"></span>
 									</a>
 								</li>
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://www.instagram.com/" aria-label="Instagram social link">
+									<a
+										class="footer__social-link"
+										href="https://www.instagram.com/"
+										aria-label="Instagram social link"
+									>
 										<span class="icon ico-instagram"></span>
 									</a>
 								</li>
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://www.pinterest.com/" aria-label="Pinterest social link">
+									<a
+										class="footer__social-link"
+										href="https://www.pinterest.com/"
+										aria-label="Pinterest social link"
+									>
 										<span class="icon ico-pinterest"></span>
 									</a>
 								</li>
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://www.youtube.com/" aria-label="Youtube social link">
+									<a
+										class="footer__social-link"
+										href="https://www.youtube.com/"
+										aria-label="Youtube social link"
+									>
 										<span class="icon ico-youtube"></span>
 									</a>
 								</li>
 								<li class="footer__social">
-									<a class="footer__social-link" href="https://www.google.com/" aria-label="Google+ social link">
+									<a
+										class="footer__social-link"
+										href="https://www.google.com/"
+										aria-label="Google+ social link"
+									>
 										<span class="icon ico-google"></span>
 									</a>
 								</li>
@@ -160,7 +366,9 @@
 				</div>
 				<div class="footer__bottom">
 					<div class="wrap">
-						<span class="footer__copy">© Copyright Hobber  2023. All Rights Reserved. By Anevem</span>
+						<span class="footer__copy"
+							>© Copyright Hobber 2023. All Rights Reserved. By Anevem</span
+						>
 					</div>
 				</div>
 			</div>
