--- a/src/index.html
+++ b/src/index.html
@@ -182,6 +182,25 @@
 				/>
 			</picture>
 		</section>
+		<section class="about">
+			<div class="wrap">
+				<div class="about__container">
+					<div class="about__img-container">
+						<img class="about__img" src="assets/images/about/about.png" alt="Hair">
+					</div>
+					<div class="about__info">
+						<h2 class="about__title">O NAMA</h2>
+						<img class="about__logo" src="assets/svg/logo-small2.svg" alt="Frizerski Studio Kotrlja">
+						<p class="about__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.
+							<br><br>
+							"Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis".
+						</p>
+						<img class="about__signature" src="assets/svg/signature.svg" alt="Signature">
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="time">
 			<div class="wrap">
 				<div class="time__container">
