--- a/src/index.html
+++ b/src/index.html
@@ -247,6 +247,125 @@
 				</div>
 			</div>
 		</section>
+		<section class="info">
+			<div class="wrap">
+				<div class="info__container">
+					<div class="info__intro">
+						<h2 class="info__title">NAŠI FRIZERI</h2>
+						<img class="info__logo" src="assets/svg/logo-small2.svg" alt="Logo">
+					</div>
+					<div class="info__slider swiper js-info">
+						<div class="swiper-wrapper">
+							<div class="info__slide swiper-slide">
+								<div class="info__img-container">
+									<img class="info__img" src="assets/images/info/info1.png" alt="Frizer">
+									<h6 class="info__subheading">Zaprati na:</h6>
+									<ul class="info__socials">
+										<li class="info__social">
+											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
+												<span class="icon ico-facebook"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
+												<span class="icon ico-twitter"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+												<span class="icon ico-instagram"></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+								<div class="info__box">
+									<h3 class="info__name">Nikola Kotrlja</h3>
+									<h4 class="info__position">Osnivač & Frizer</h4>
+									<p class="info__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.</p>
+									<h5 class="info__subtitle">Zakazivanje na telefon</h5>
+									<a class="info__phone" href="tel:+3810000000">+381 000-00-00</a>
+									<h6 class="info__subheading">Zaprati na:</h6>
+									<ul class="info__socials">
+										<li class="info__social">
+											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
+												<span class="icon ico-facebook"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
+												<span class="icon ico-twitter"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+												<span class="icon ico-instagram"></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+
+							<div class="info__slide swiper-slide">
+								<div class="info__img-container">
+									<img class="info__img" src="assets/images/info/info2.png" alt="Frizer">
+									<h6 class="info__subheading">Zaprati na:</h6>
+									<ul class="info__socials">
+										<li class="info__social">
+											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
+												<span class="icon ico-facebook"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
+												<span class="icon ico-twitter"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+												<span class="icon ico-instagram"></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+								<div class="info__box">
+									<h3 class="info__name">Nikola Kotrlja2</h3>
+									<h4 class="info__position">Osnivač & Frizer</h4>
+									<p class="info__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.</p>
+									<h5 class="info__subtitle">Zakazivanje na telefon</h5>
+									<a class="info__phone" href="tel:+3810000000">+381 000-00-00</a>
+									<h6 class="info__subheading">Zaprati na:</h6>
+									<ul class="info__socials">
+										<li class="info__social">
+											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
+												<span class="icon ico-facebook"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
+												<span class="icon ico-twitter"></span>
+											</a>
+										</li>
+										<li class="info__social">
+											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
+												<span class="icon ico-instagram"></span>
+											</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="info__controls">
+							<button class="info__btn info__btn--prev js-info-prev" aria-label="Slide to previous slide">
+								<span class="icon ico-slider-arrow"></span>
+							</button>
+							<button class="info__btn info__btn--next js-info-next" aria-label="Slide to previous slide">
+								<span class="icon ico-slider-arrow"></span>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section class="testimonials">
 			<h3 class="testimonials__title">ZADOVOLJNE MUŠTERIJE</h3>
 			<img
@@ -330,7 +449,7 @@
 										class="footer__social-link"
 										href="https://sr-rs.facebook.com/"
 										aria-label="Facebook social link"
-									>
+									target="_blank">
 										<span class="icon ico-facebook"></span>
 									</a>
 								</li>
@@ -339,7 +458,7 @@
 										class="footer__social-link"
 										href="https://twitter.com/"
 										aria-label="Twitter social link"
-									>
+									target="_blank">
 										<span class="icon ico-twitter"></span>
 									</a>
 								</li>
@@ -348,7 +467,7 @@
 										class="footer__social-link"
 										href="https://www.instagram.com/"
 										aria-label="Instagram social link"
-									>
+									target="_blank">
 										<span class="icon ico-instagram"></span>
 									</a>
 								</li>
@@ -357,7 +476,7 @@
 										class="footer__social-link"
 										href="https://www.pinterest.com/"
 										aria-label="Pinterest social link"
-									>
+									target="_blank">
 										<span class="icon ico-pinterest"></span>
 									</a>
 								</li>
@@ -366,7 +485,7 @@
 										class="footer__social-link"
 										href="https://www.youtube.com/"
 										aria-label="Youtube social link"
-									>
+									target="_blank">
 										<span class="icon ico-youtube"></span>
 									</a>
 								</li>
@@ -375,7 +494,7 @@
 										class="footer__social-link"
 										href="https://www.google.com/"
 										aria-label="Google+ social link"
-									>
+									target="_blank">
 										<span class="icon ico-google"></span>
 									</a>
 								</li>
