--- a/src/index.html
+++ b/src/index.html
@@ -247,6 +247,66 @@
 				</div>
 			</div>
 		</section>
+		<section class="popular">
+			<div class="wrap">
+				<div class="popular__container">
+					<h2 class="popular__title">POPULARNE FRIZURE</h2>
+					<div class="popular__slider-primary-box">
+						<div class="popular__slider-primary swiper js-popular-primary-slider">
+							<div class="popular__slider-primary-wrapper swiper-wrapper">
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/1.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/2.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/3.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/1.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/2.png" alt="Frizura">
+								</div>
+								<div class="popular__slider-primary-slide swiper-slide">
+									<img class="popular__img" src="assets/images/popular/3.png" alt="Frizura">
+								</div>
+							</div>
+						</div>
+						<button class="popular__button popular__button--prev js-popular-prev" aria-label="slide to previous slide">
+							<i class="icon ico-slider-arrow"></i>
+						</button>
+						  <button class="popular__button popular__button--next js-popular-next" aria-label="slide to next slide">
+							<i class="icon ico-slider-arrow"></i>
+						</button>
+					</div>
+					<div class="popular__slider-second swiper js-popular-second-slider">
+						<div class="popular__slider-second-wrapper swiper-wrapper">
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur pellentesque neque eget diam.</p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Curabitur..</p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit...</p>
+							</div>
+							<div class="popular__slider-second-slide swiper-slide">
+								<p class="popular__desc">Curabitur pellentesque neque eget diam.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="popular__pagination swiper-pagination js-slider-pagination"></div>
+			</div>
+		</section>
 		<section class="info">
 			<div class="wrap">
 				<div class="info__container">
