service slide + some updates

--- a/src/index.html
+++ b/src/index.html
@@ -713,7 +713,9 @@
 						<button class="services__btn services__btn--next js-services-next">
 							<i class="icon ico-slider-arrow"></i>
 						</button>
-						<div class="services__pagination js-services-pagination"></div>
+						<div class="services__pagination services__pagination--first js-services-pagination"></div>
+						<div class="services__pagination services__pagination--second js-services-pagination-second"></div>
+
 					</div>
 				</div>
 			</div>
