--- a/src/index.html
+++ b/src/index.html
@@ -123,34 +123,34 @@
 						<div class="nav__container js-nav-container">
 							<ul class="nav__list">
 								<li class="nav__item">
-									<button class="nav__href js-nav-href active" data-link="home">
+									<a class="nav__href js-nav-href active" href="#banner">
 										POČETNA
-									</button>
+									</a>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="about">
+									<a class="nav__href js-nav-href" href="#about">
 										O NAMA
-									</button>
+									</a>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="services">
+									<a class="nav__href js-nav-href" href="#time">
+										RADNO VREME
+									</a>
+								</li>
+								<li class="nav__item">
+									<a class="nav__href js-nav-href" href="#services">
 										USLUGE
-									</button>
+									</a>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="gallery">
-										GALERIJA
-									</button>
+									<a class="nav__href js-nav-href" href="#popular">
+										FRIZURE
+									</a>
 								</li>
 								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="blog">
-										BLOG
-									</button>
-								</li>
-								<li class="nav__item">
-									<button class="nav__href js-nav-href" data-link="contact">
+									<a class="nav__href js-nav-href" href="#info">
 										KONTAKT
-									</button>
+									</a>
 								</li>
 							</ul>
 							<button
@@ -162,7 +162,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="banner" id="home">
+		<section class="banner" id="banner">
 			<span class="banner__prefix">DOBRODOŠLI U</span>
 			<h1 class="banner__title">Kotrlja - Frizerski Studio</h1>
 			<img class="banner__logo" src="assets/svg/logo-big.svg" alt="Logo" />
@@ -182,7 +182,7 @@
 				/>
 			</picture>
 		</section>
-		<section class="about">
+		<section class="about" id="about">
 			<div class="wrap">
 				<div class="about__container">
 					<div class="about__img-container">
@@ -201,7 +201,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="time">
+		<section class="time" id="time">
 			<div class="wrap">
 				<div class="time__container">
 					<h2 class="time__title">RADNO VREME</h2>
@@ -247,7 +247,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="services">
+		<section class="services" id="services">
 			<div class="wrap">
 				<div class="services__container">
 					<h2 class="services__title">NAŠE USLUGE/CENOVNIK</h2>
@@ -720,7 +720,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="popular">
+		<section class="popular" id="popular">
 			<div class="wrap">
 				<div class="popular__container">
 					<h2 class="popular__title">POPULARNE FRIZURE</h2>
@@ -780,7 +780,7 @@
 				<div class="popular__pagination swiper-pagination js-slider-pagination"></div>
 			</div>
 		</section>
-		<section class="info">
+		<section class="info" id="info">
 			<div class="wrap">
 				<div class="info__container">
 					<div class="info__intro">
@@ -899,7 +899,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="testimonials">
+		<section class="testimonials" id="testimonials">
 			<h3 class="testimonials__title">ZADOVOLJNE MUŠTERIJE</h3>
 			<img
 				class="testimonials__logo"
@@ -957,7 +957,7 @@
 				<div class="testimonials__pagination swiper-pagination js-testimonials-pagination"></div>
 			</div>
 		</section>
-		<footer class="footer">
+		<footer class="footer" id="footer">
 			<div class="footer__container">
 				<div class="footer__top">
 					<div class="wrap">
