--- a/src/index.html
+++ b/src/index.html
@@ -123,7 +123,7 @@
 						<div class="nav__container js-nav-container">
 							<ul class="nav__list">
 								<li class="nav__item">
-									<a class="nav__href js-nav-href active" href="#banner">
+									<a class="nav__href js-nav-href" href="#banner">
 										POČETNA
 									</a>
 								</li>
@@ -169,7 +169,7 @@
 			<picture class="banner__bg-picture">
 				<source
 					media="(max-width: 767px)"
-					srcset="assets/images/banner/banner-s.jpg"
+					srcset="assets/images/banner/banner-s.webp"
 				/>
 				<source
 					media="(min-width: 768px) and (max-width: 1024px)"
@@ -840,7 +840,7 @@
 
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
-									<img class="info__img" src="assets/images/info/info2.png" alt="Frizer">
+									<img class="info__img info__img--left" src="assets/images/info/info2.png" alt="Frizer">
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
