frizer + banner fix

--- a/src/index.html
+++ b/src/index.html
@@ -169,7 +169,7 @@
 			<picture class="banner__bg-picture">
 				<source
 					media="(max-width: 767px)"
-					srcset="assets/images/banner/banner-s.webp"
+					srcset="assets/images/banner/banner-s.jpg"
 				/>
 				<source
 					media="(min-width: 768px) and (max-width: 1024px)"
