--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
 						</svg>
 						<a
 							class="header__logo-link"
-							href="/"
+							href="#banner"
 							aria-label="Homepage link"
 						></a>
 					</div>
@@ -815,8 +815,6 @@
 									<h3 class="info__name">Nikola Kotrlja</h3>
 									<h4 class="info__position">Osnivač & Frizer</h4>
 									<p class="info__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.</p>
-									<h5 class="info__subtitle">Zakazivanje na telefon</h5>
-									<a class="info__phone" href="tel:+3810000000">+381 000-00-00</a>
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
@@ -841,49 +839,11 @@
 							<div class="info__slide swiper-slide">
 								<div class="info__img-container">
 									<img class="info__img info__img--left" src="assets/images/info/info2.png" alt="Frizer">
-									<h6 class="info__subheading">Zaprati na:</h6>
-									<ul class="info__socials">
-										<li class="info__social">
-											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
-												<span class="icon ico-facebook"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
-												<span class="icon ico-twitter"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
-												<span class="icon ico-instagram"></span>
-											</a>
-										</li>
-									</ul>
 								</div>
 								<div class="info__box">
-									<h3 class="info__name">Nikola Kotrlja2</h3>
-									<h4 class="info__position">Osnivač & Frizer</h4>
-									<p class="info__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.</p>
-									<h5 class="info__subtitle">Zakazivanje na telefon</h5>
-									<a class="info__phone" href="tel:+3810000000">+381 000-00-00</a>
-									<h6 class="info__subheading">Zaprati na:</h6>
-									<ul class="info__socials">
-										<li class="info__social">
-											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
-												<span class="icon ico-facebook"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
-												<span class="icon ico-twitter"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://www.instagram.com/" target="_blank">
-												<span class="icon ico-instagram"></span>
-											</a>
-										</li>
-									</ul>
+									<h3 class="info__name">Marko Marković</h3>
+									<h4 class="info__position">Frizer</h4>
+									<p class="info__desc">In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.</p>
 								</div>
 							</div>
 						</div>
