--- a/src/index.html
+++ b/src/index.html
@@ -795,13 +795,8 @@
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
-												<span class="icon ico-facebook"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
-												<span class="icon ico-twitter"></span>
+											<a class="info__social-link" href="mailto: example@example.com">
+												<span class="icon ico-mail"></span>
 											</a>
 										</li>
 										<li class="info__social">
@@ -814,17 +809,22 @@
 								<div class="info__box">
 									<h3 class="info__name">Nikola Kotrlja</h3>
 									<h4 class="info__position">Osnivač & Frizer</h4>
-									<p class="info__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.</p>
+									<button class="info__bio-open js-bio-open">
+										<i class="icon ico-bio" aria-label="Open bio"></i>
+									</button>
+									<div class="info__desc">
+										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
+											<i class="icon ico-close"></i>
+										</button>
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus.
+										</p>
+									</div>
 									<h6 class="info__subheading">Zaprati na:</h6>
 									<ul class="info__socials">
 										<li class="info__social">
-											<a class="info__social-link" href="https://sr-rs.facebook.com/" target="_blank">
-												<span class="icon ico-facebook"></span>
-											</a>
-										</li>
-										<li class="info__social">
-											<a class="info__social-link" href="https://twitter.com/?lang=sr" target="_blank">
-												<span class="icon ico-twitter"></span>
+											<a class="info__social-link" href="mailto: example@example.com">
+												<span class="icon ico-mail"></span>
 											</a>
 										</li>
 										<li class="info__social">
@@ -843,11 +843,21 @@
 								<div class="info__box">
 									<h3 class="info__name">Marko Marković</h3>
 									<h4 class="info__position">Frizer</h4>
-									<p class="info__desc">In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.In eu justo a felis faucibus ornare vel id metus.</p>
+									<button class="info__bio-open js-bio-open">
+										<i class="icon ico-bio" aria-label="Open bio"></i>
+									</button>
+									<div class="info__desc">
+										<button class="info__btn-close js-info-close" aria-label="Close ico-bio">
+											<i class="icon ico-close"></i>
+										</button>
+										<p>
+											Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+										</p>
+									</div>
 								</div>
 							</div>
 						</div>
-						<div class="info__controls">
+						<div class="info__controls js-info-controls">
 							<button class="info__btn info__btn--prev js-info-prev" aria-label="Slide to previous slide">
 								<span class="icon ico-slider-arrow"></span>
 							</button>
@@ -880,7 +890,7 @@
 								alt="Zadovoljna musterija"
 							/>
 							<h4 class="client__name">Marko Marković</h4>
-							<span class="client__desc">-Mušterija</span>
+							<span class="client__desc">Mušterija</span>
 						</div>
 					</div>
 					<div class="testimonials__slider swiper-slide">
@@ -895,7 +905,7 @@
 								alt="Zadovoljna musterija"
 							/>
 							<h4 class="client__name">Marko Marković</h4>
-							<span class="client__desc">-Mušterija</span>
+							<span class="client__desc">Mušterija</span>
 						</div>
 					</div>
 					<div class="testimonials__slider swiper-slide">
@@ -910,7 +920,7 @@
 								alt="Zadovoljna musterija"
 							/>
 							<h4 class="client__name">Marko Marković</h4>
-							<span class="client__desc">-Mušterija</span>
+							<span class="client__desc">Mušterija</span>
 						</div>
 					</div>
 				</div>
