--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
 								</li>
 								<li class="nav__item">
 									<a class="nav__href js-nav-href" href="#services">
-										USLUGE
+										USLUGE/CENOVNIK
 									</a>
 								</li>
 								<li class="nav__item">
