Nav link detection

--- a/src/index.html
+++ b/src/index.html
@@ -123,32 +123,32 @@
 						<div class="nav__container js-nav-container">
 							<ul class="nav__list">
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#banner">
+									<a class="nav__href js-nav-href" href="#banner" data-nav="banner">
 										POČETNA
 									</a>
 								</li>
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#about">
+									<a class="nav__href js-nav-href" href="#about" data-nav="about">
 										O NAMA
 									</a>
 								</li>
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#time">
+									<a class="nav__href js-nav-href" href="#time" data-nav="time">
 										RADNO VREME
 									</a>
 								</li>
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#services">
+									<a class="nav__href js-nav-href" href="#services" data-nav="services">
 										USLUGE/CENOVNIK
 									</a>
 								</li>
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#popular">
+									<a class="nav__href js-nav-href" href="#popular" data-nav="popular">
 										FRIZURE
 									</a>
 								</li>
 								<li class="nav__item">
-									<a class="nav__href js-nav-href" href="#info">
+									<a class="nav__href js-nav-href" href="#info" data-nav="info">
 										KONTAKT
 									</a>
 								</li>
